syntax = "proto3";

package MMORPG.Common.Proto.Entity;

enum ActorState {
    IDLE = 0;
    MOVE = 1;
    SKILL = 2;
    HURT = 3;
    DEATH = 4;
}